--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <div>Logged in as {{.User.Login}}</div>
+
     {{if Debug }}
       <div class="alert alert-warning">
         Warning: This site is in DEBUG mode and is <strong>NOT SAFE</strong> for production
