--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -36,5 +36,5 @@
     {{block "extrajs" .}}{{end}}
   </body>
 </html>
-{{Comment (printf "v%s" .Version)}}
+{{Comment (printf "v%s" Version)}}
 {{end}}
