--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -1,3 +1,6 @@
+{{block "metatitle" .}}Add Student - Canvas Student Integrator{{end}}
+{{block "title" .}}<h1>Add Student</h1>{{end}}
+
 {{block "content" .}}
 
 <form id="association-form" method="POST" action="{{FullPath "submit-duckid"}}">
