--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{.Title}}</title>
+    <title>{{block "metatitle" .}}Canvas Student Integrator{{end}}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -17,7 +17,7 @@
       </div>
     {{end}}
 
-    <h1>{{.Title}}</h1>
+    {{block "title" .}}<h1>Canvas Student Integrator</h1>{{end}}
 
     {{- if .Alert}}
       <div class="alert alert-danger">
