sci-server: Put course description on success page

--- a/templates/enroll_success.go.html
+++ b/templates/enroll_success.go.html
@@ -3,7 +3,8 @@
 
 {{block "content" .}}
 
-{{.Form.Student.DisplayName}} added to course {{.Form.CRN}}
+{{.Form.Student.DuckID}} ({{.Form.Student.DisplayName}}) added to course
+{{.Form.CRN}} ({{.Form.Course.Description}})
 
 <div>Explanatory text about how it takes a day and dupes are safe</div>
 <div>Link to add another for this class?  Or just reprint the form with CRN selected?</div>
