--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,7 @@
-body {
-  padding-bottom: 70px;
-}
-
 #main {
   font-family: sans-serif;
   font-size: 1.2em;
+  min-height: 600px;
 }
 
 @media screen and (min-width: 480px) {
