--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -5,7 +5,8 @@
   <head>
     <title>{{block "metatitle" .}}Canvas Student Integrator{{end}}</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     {{RawCSS "bootstrap/css/bootstrap.min.css"}}
     {{IncludeCSS "header"}}
