Improve confirmation UI

--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -3,7 +3,7 @@
 
 {{block "content" .}}
 
-<div>
+<div class="alert alert-info">
   You're about to add {{.Form.DuckID}} ({{.Form.Student.DisplayName}}) to
   course {{.Form.CRN}} ({{.Form.Course.Description}}).  If this is correct,
   please choose "confirm" below.
@@ -12,7 +12,7 @@
 <form id="association-form" method="POST" action="{{FullPath ""}}">
   <input type="hidden" name="duckid" id="duckid" value="{{.Form.DuckID}}"/>
   <input type="hidden" name="crn" id="crn" value="{{.Form.CRN}}" />
-  <button type="submit" name="confirm" value="1" class="prevent-double-click">Confirm</button>
-  <button type="submit" name="confirm" value="0" class="prevent-double-click">Choose a different duckid</button>
+  <button class="btn btn-success" type="submit" name="confirm" value="1" class="prevent-double-click">Confirm</button>
+  <button class="btn btn-secondary" type="submit" name="confirm" value="0" class="prevent-double-click">Go Back</button>
 </form>
 {{end}}
