Fix missing login text

--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -21,7 +21,7 @@
         <a href="https://library.uoregon.edu/" rel="home" id="uolib-logo">
           <img src="{{ImageURL "libraries.svg"}}" alt="University of Oregon Libraries" />
         </a>
-        <div class="pull-right userlogin">Logged in as {{.User.Login}}</div>
+        <div class="float-right userlogin">Logged in as {{.User.Login}}</div>
       </div>
     </div>
 
