Fix UI for alerts

--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -36,12 +36,12 @@
 
       {{- if .Alert}}
         <div class="alert alert-danger">
-          <p>{{.Alert}}</p>
+          {{.Alert}}
         </div>
       {{- end}}
       {{- if .Info}}
         <div class="alert alert-info">
-          <p>{{.Info}}</p>
+          {{.Info}}
         </div>
       {{- end}}
 
