Remove unnecessary action on main form

--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -3,7 +3,7 @@
 
 {{block "content" .}}
 
-<form id="association-form" method="POST" action="{{FullPath ""}}">
+<form id="association-form" method="POST">
   <div class="form-group row">
     <label for="duckid" class="col-sm-2 col-form-label">Duck ID:</label>
     <div class="col-sm-10">
