Change wording: student/GTF => GE

--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -1,4 +1,4 @@
-{{block "metatitle" .}}Confirmation - Canvas Student Integrator{{end}}
+{{block "metatitle" .}}Confirmation - Canvas Integrator{{end}}
 {{block "title" .}}<h1>Confirmation</h1>{{end}}
 
 {{block "content" .}}
