--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
   <head>
-    <title>{{block "metatitle" .}}Canvas Student Integrator{{end}}</title>
+    <title>{{block "metatitle" .}}Canvas Integrator{{end}}</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,7 +32,7 @@
         </div>
       {{end}}
 
-      {{block "title" .}}<h1>Canvas Student Integrator</h1>{{end}}
+      {{block "title" .}}<h1>Canvas Integrator</h1>{{end}}
 
       {{- if .Alert}}
         <div class="alert alert-danger">
