sci-server.Form: rename field Student => GE

--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -4,7 +4,7 @@
 {{block "content" .}}
 
 <div class="alert alert-info">
-  You're about to add {{.Form.DuckID}} ({{.Form.Student.DisplayName}}) to
+  You're about to add {{.Form.DuckID}} ({{.Form.GE.DisplayName}}) to
   course {{.Form.CRN}} ({{.Form.Course.Description}}).  If this is correct,
   please choose "confirm" below.
 </div>
