--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -4,9 +4,11 @@
 {{block "content" .}}
 
 <div class="alert alert-info">
-  You're about to add {{.Form.DuckID}} ({{.Form.GE.DisplayName}}) to
-  course {{.Form.CRN}} ({{.Form.Course.Description}}).  If this is correct,
-  please choose "confirm" below.
+  You're about to add {{.Form.DuckID}} ({{.Form.GE.DisplayName}})
+  to CRN {{stripterm .Form.CRN}}, listed in Canvas as course:
+  {{.Form.Course.Description}}.
+
+  If this is correct, please choose "Confirm" below.
 </div>
 
 <form id="association-form" method="POST" action="{{FullPath ""}}">
