Reword take 2: "GE/GTF" => "GE"

--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -1,17 +1,17 @@
-{{block "metatitle" .}}Add GE/GTF - Canvas Integrator{{end}}
+{{block "metatitle" .}}Add GE - Canvas Integrator{{end}}
 {{block "title" .}}<!-- 0x90 -->{{end}}
 
 {{block "content" .}}
 
 <div class="card">
   <div class="card-body">
-    <h1 class="card-title">Add a GE/GTF to a course</h1>
+    <h1 class="card-title">Add a GE to a course</h1>
     <div id="form-info" class="card-text">
-      Choose a course and enter a duckid to associate a GE/GTF.  The process which
-      sends GEs/GTFs into canvas only runs once a day, so you may have to wait up to 24
+      Choose a course and enter a duckid to associate a GE.  The process which
+      sends GEs into canvas only runs once a day, so you may have to wait up to 24
       hours for your form submission to take effect.
       <p /><p />
-      Note that you may associate a GE/GTF to the same course multiple times and the
+      Note that you may associate a GE to the same course multiple times and the
       import will still function properly.  If you aren't sure if you've entered
       somebody, there's no risk in entering them again.
     </div>
