Fix footer presentation

--- a/templates/layout.go.html
+++ b/templates/layout.go.html
@@ -95,20 +95,21 @@
 
         <section id="uobannerandfooter-uofooter">
           <div class="uofooter-container container">
-            <div class="col-md-6">&nbsp;</div>
-            <div class="col-md-5">
-              <div class="uofooter-copyright-container">
-                <span class="copyright">
-                  &copy;
-                  <a href="http://uoregon.edu">University of Oregon</a>.
-                </span>
-                <span class="all-rights-reserved">All Rights Reserved.</span>
+            <div class="row">
+              <div class="col-md-5 offset-md-5">
+                <div class="uofooter-copyright-container">
+                  <span class="copyright">
+                    &copy;
+                    <a href="http://uoregon.edu">University of Oregon</a>.
+                  </span>
+                  <span class="all-rights-reserved">All Rights Reserved.</span>
+                </div>
               </div>
-            </div>
-            <div class="col-md-1 uofooter-logo-container">
-              <a href="http://uoregon.edu">
-                <img src="{{ImageURL "footer-logo.png"}}" alt="University of Oregon" width="53" height="44" />
-              </a>
+              <div class="col-md-2 uofooter-logo-container">
+                <a href="http://uoregon.edu">
+                  <img src="{{ImageURL "footer-logo.png"}}" alt="University of Oregon" width="53" height="44" />
+                </a>
+              </div>
             </div>
           </div>
         </section>
