--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -1,4 +1,4 @@
-{{block "metatitle" .}}Add GE - Canvas Integrator{{end}}
+{{block "metatitle" .}}Add enrollment - Canvas Integrator{{end}}
 {{block "title" .}}<!-- 0x90 -->{{end}}
 
 {{block "content" .}}
@@ -7,13 +7,13 @@
   <div class="card-body">
     <h1 class="card-title">Add a GE to a course</h1>
     <div id="form-info" class="card-text">
-      Choose a course and enter a duckid to associate a GE.  The process which
-      sends GEs into canvas only runs once a day, so you may have to wait up to 24
-      hours for your form submission to take effect.
+      Enter a duckid, choose a course, and choose a role (GE or Grader).  The
+      process which sends enrollments into canvas only runs once a day, so you
+      may have to wait up to 24 hours for your form submission to take effect.
       <p /><p />
-      Note that you may associate a GE to the same course multiple times and the
-      import will still function properly.  If you aren't sure if you've entered
-      somebody, there's no risk in entering them again.
+      Note that you may associate somebody to the same course multiple times
+      and the import will still function properly.  If you aren't sure if
+      you've entered somebody, there's no risk in entering them again.
     </div>
   </div><!-- /card-body -->
 
