Open FERPA form in a new tab

--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -17,7 +17,10 @@
     confidentiality of student records by reading and signing the Code of
     Responsibility for Security and Confidentiality of Education Records
     and Files:
-    <a href="https://registrar.uoregon.edu/sites/registrar2.uoregon.edu/files/pdf/Ferpa-Code-of-Responsibility.pdf">FERPA Code of Responsibility</a>
+    <a
+      href="https://registrar.uoregon.edu/sites/registrar2.uoregon.edu/files/pdf/Ferpa-Code-of-Responsibility.pdf"
+      target="_blank"
+      >FERPA Code of Responsibility (opens in a new tab / window)</a>
   </p>
 {{else}}
   <p>
