Update form explanatory text
Per KM, updates the card-text section to be less verbose and more clear
about timing.  Also updated the heading to include "Grader" since the
current heading is incorrect.

--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -5,15 +5,11 @@
 
 <div class="card">
   <div class="card-body">
-    <h1 class="card-title">Add a GE to a course</h1>
+    <h1 class="card-title">Add a GE / Grader to a course</h1>
     <div id="form-info" class="card-text">
-      Enter a duckid, choose a course, and choose a role (GE or Grader).  The
-      process which sends enrollments into canvas only runs once a day, so you
-      may have to wait up to 24 hours for your form submission to take effect.
-      <p /><p />
-      Note that you may associate somebody to the same course multiple times
-      and the import will still function properly.  If you aren't sure if
-      you've entered somebody, there's no risk in entering them again.
+      Enter a duckid, choose a course, and choose a role (GE or Grader).  This
+      process will send enrollments to Canvas three times daily. If you aren't
+      sure if you've entered somebody, there's no risk in entering them again.
     </div>
   </div><!-- /card-body -->
 
