Fix incorrect bootstrap class on checkbox
Fixes issues displaying the checkbox on chrome.  Probably a remnant from
previous attempts to line up the checkbox before realizing bootstrap has
an easy way to handle this....

--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -36,7 +36,7 @@
   {{if .Form.IsGrader }}
     <div class="form-check">
       <div class="form-check-input">
-        <input type="checkbox" name="graderReqMet" id="graderReqMet" class="col-sm-2" required value="1">
+        <input type="checkbox" name="graderReqMet" id="graderReqMet" required value="1">
       </div>
 
       <label class="form-check-label" for="graderReqMet">
