Remove Banner ID from UI confirmation

--- a/templates/confirm_duckid.go.html
+++ b/templates/confirm_duckid.go.html
@@ -6,7 +6,7 @@
 <div class="alert alert-info">
   <p>
     You're about to associate
-    <strong>{{.Form.Agent.DisplayName}}</strong> (<i>{{.Form.Agent.DuckID}} / {{.Form.Agent.BannerID}}</i>)
+    <strong>{{.Form.Agent.DisplayName}}</strong> (<i>{{.Form.Agent.DuckID}}</i>)
     as a <strong>{{.Form.Role}}</strong>
     on Canvas course "<strong>{{.Form.Course.Description}}</strong>" (<i>CRN {{stripterm .Form.CRN}}</i>).
   </p>
