--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -18,7 +18,7 @@
       <div class="form-group row">
         <label for="duckid" class="col-sm-2 col-form-label">Duck ID:</label>
         <div class="col-sm-10">
-          <input class="form-control" name="duckid" id="duckid" value="{{.Form.DuckID}}"/>
+          <input class="form-control" name="duckid" id="duckid" value="{{.Form.DuckID}}" placeholder="Example: {{.User.Login}}, not {{.User.Login}}@uoregon.edu" />
         </div>
       </div>
 
