Add notice of impending shutdown

--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -3,6 +3,24 @@
 
 {{block "content" .}}
 
+<div class="container">
+	<div class="alert alert-info">
+
+    <p>
+      Beginning Friday, April 5, adding TAs and Graders to courses can be done
+      directly in <a href="https://canvas.uoregon.edu">Canvas</a>.
+    </p>
+
+    <p>
+      If you experience difficulty on April 5th or later with Canvas adds, you
+      may use this form as an alternative, and should also submit a help
+      request through the
+      <a href="https://service.uoregon.edu/TDClient/Requests/ServiceDet?ID=22132">UO Service Portal page for Canvas</a>.
+    </p>
+
+	</div>
+</div>
+
 <div class="card">
   <div class="card-body">
     <h1 class="card-title">Add a GE / Grader to a course</h1>
