--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -4,21 +4,15 @@
 {{block "content" .}}
 
 <div class="container">
-	<div class="alert alert-info">
-
-    <p>
-      Beginning Friday, April 5, adding TAs and Graders to courses can be done
-      directly in <a href="https://canvas.uoregon.edu">Canvas</a>.
-    </p>
-
-    <p>
-      If you experience difficulty on April 5th or later with Canvas adds, you
-      may use this form as an alternative, and should also submit a help
-      request through the
-      <a href="https://service.uoregon.edu/TDClient/Requests/ServiceDet?ID=22132">UO Service Portal page for Canvas</a>.
-    </p>
-
-	</div>
+  <p class="alert alert-info">
+    Good news! The ability to add other users to your course is now available
+    within Canvas. This self-serve process is live as of 9:00am, April 5, 2019.
+    New roles are available within Canvas. For information on how to Add People
+    and the changes to Canvas Roles, please go to
+    <a href="https://library.uoregon.edu/cmet/canvas/add-people">Add People</a>.
+    If you experience difficulty with Canvas adds, please
+    <a href="https://oregon.qualtrics.com/jfe/form/SV_da3r7IB9dWWuVG5?Q_JFE=qdg">submit a help request</a>.
+  </p>
 </div>
 
 <div class="card">
