--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -17,9 +17,9 @@
 
 <div class="card">
   <div class="card-body">
-    <h1 class="card-title">Add a GE / Grader to a course</h1>
+    <h1 class="card-title">Add a TA / Grader to a course</h1>
     <div id="form-info" class="card-text">
-      Enter a duckid, choose a course, and choose a role (GE or Grader).  This
+      Enter a duckid, choose a course, and choose a role (TA or Grader).  This
       process will send enrollments to Canvas three times daily. If you aren't
       sure if you've entered somebody, there's no risk in entering them again.
     </div>
