--- a/templates/home.go.html
+++ b/templates/home.go.html
@@ -5,10 +5,8 @@
 
 <div class="container">
   <p class="alert alert-info">
-    Good news! The ability to add other users to your course is now available
-    within Canvas. This self-serve process is live as of 9:00am, April 5, 2019.
-    New roles are available within Canvas. For information on how to Add People
-    and the changes to Canvas Roles, please go to
+    The ability to add other users to your course is now available
+    in Canvas. To Add People, or to learn more about the changes to Canvas Roles, please go to
     <a href="https://library.uoregon.edu/cmet/canvas/add-people">Add People</a>.
     If you experience difficulty with Canvas adds, please
     <a href="https://oregon.qualtrics.com/jfe/form/SV_da3r7IB9dWWuVG5?Q_JFE=qdg">submit a help request</a>.
